criando usuario e validando campos

--- a/cadastro/public/cadastro.html
+++ b/cadastro/public/cadastro.html
@@ -14,15 +14,18 @@
             <div class="corpo-campos">
                 <h1>Dados do Usuário</h1>
                 <label for="name">Nome:</label>
-                <input type="text" name="nome" id="name"  placeholder="Digite seu Nome">
-                <label for="ermail">Email:</label>
+                <input type="text" name="nome" id="name" placeholder="Digite seu Nome" >
+                <label for="cpf">CPF:</label>
+                <input type="number" name="nome" id="cpf" placeholder="Digite seu CPF">
+                <label for="email">Email:</label>
                 <input type="email" name="email" id="email" placeholder="Digite seu Email">
                 <label for="senha">Senha:</label>
                 <input type="password" name="senha" id="senha" placeholder="Digite Sua Senha">
-                <label for="data">Data de Nasc:</label>
-                <input type="date" name="data" id="data">
-                <button class="botao">Cadastrar</button>
-                <button class="botao2">Login</button>
+                <div class="button">
+                    <button class="botao">Cadastrar</button>
+                    <button class="botao2">Login</button>
+                </div>
+                <button class="limpar">Limpar Campos</button>
             </div>
         </div>
     </div>
